[package]
name = "eluna"
version = "0.1.0"
edition = "2021"
authors = ["Artem Bebik <artem@bebyx.co.ua>"]

description = "Not-so-precise moon calendar for 1900-2100"
repository = "https://github.com/bebyx/eluna"
keywords = ["lunar", "calendar", "moon"]
license = "LGPL-3.0"
categories = ["date-and-time"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float_extras = "0.1.6"
